chore: upgrade to hashicorp/google-beta 5.26.0

--- a/package/crds/compute.gcp.upbound.io_addresses.yaml
+++ b/package/crds/compute.gcp.upbound.io_addresses.yaml
@@ -78,9 +78,8 @@ spec:
                 properties:
                   address:
                     description: The static external IP address represented by this
-                      resource. Only IPv4 is supported. An address may only be specified
-                      for INTERNAL address types. The IP address must be inside the
-                      specified subnetwork, if any. Set by the API if undefined.
+                      resource. The IP address must be inside the specified subnetwork,
+                      if any. Set by the API if undefined.
                     type: string
                   addressType:
                     description: 'The type of address to reserve. Note: if you set
@@ -91,6 +90,22 @@ spec:
                   description:
                     description: An optional description of this resource.
                     type: string
+                  ipVersion:
+                    description: 'The IP Version that will be used by this address.
+                      The default value is IPV4. Possible values are: IPV4, IPV6.'
+                    type: string
+                  ipv6EndpointType:
+                    description: 'The endpoint type of this address, which should
+                      be VM or NETLB. This is used for deciding which type of endpoint
+                      this address can be used after the external IPv6 address reservation.
+                      Possible values are: VM, NETLB.'
+                    type: string
+                  labels:
+                    additionalProperties:
+                      type: string
+                    description: Labels to apply to this address.  A list of key->value
+                      pairs.
+                    type: object
                   network:
                     description: The URL of the network in which to reserve the address.
                       This field can only be used with INTERNAL type with the VPC_PEERING
@@ -544,9 +559,8 @@ spec:
                 properties:
                   address:
                     description: The static external IP address represented by this
-                      resource. Only IPv4 is supported. An address may only be specified
-                      for INTERNAL address types. The IP address must be inside the
-                      specified subnetwork, if any. Set by the API if undefined.
+                      resource. The IP address must be inside the specified subnetwork,
+                      if any. Set by the API if undefined.
                     type: string
                   addressType:
                     description: 'The type of address to reserve. Note: if you set
@@ -560,9 +574,34 @@ spec:
                   description:
                     description: An optional description of this resource.
                     type: string
+                  effectiveLabels:
+                    additionalProperties:
+                      type: string
+                    description: for all of the labels present on the resource.
+                    type: object
                   id:
                     description: an identifier for the resource with format projects/{{project}}/regions/{{region}}/addresses/{{name}}
                     type: string
+                  ipVersion:
+                    description: 'The IP Version that will be used by this address.
+                      The default value is IPV4. Possible values are: IPV4, IPV6.'
+                    type: string
+                  ipv6EndpointType:
+                    description: 'The endpoint type of this address, which should
+                      be VM or NETLB. This is used for deciding which type of endpoint
+                      this address can be used after the external IPv6 address reservation.
+                      Possible values are: VM, NETLB.'
+                    type: string
+                  labelFingerprint:
+                    description: The fingerprint used for optimistic locking of this
+                      resource.  Used internally during updates.
+                    type: string
+                  labels:
+                    additionalProperties:
+                      type: string
+                    description: Labels to apply to this address.  A list of key->value
+                      pairs.
+                    type: object
                   network:
                     description: The URL of the network in which to reserve the address.
                       This field can only be used with INTERNAL type with the VPC_PEERING
@@ -600,6 +639,12 @@ spec:
                       subnetwork's IP range. This field can only be used with INTERNAL
                       type with GCE_ENDPOINT/DNS_RESOLVER purposes.
                     type: string
+                  terraformLabels:
+                    additionalProperties:
+                      type: string
+                    description: The combination of labels configured directly on
+                      the resource and default labels configured on the provider.
+                    type: object
                   users:
                     description: The URLs of the resources that are using this address.
                     items:
