--- a/package/crds/compute.gcp.upbound.io_regionbackendservices.yaml
+++ b/package/crds/compute.gcp.upbound.io_regionbackendservices.yaml
@@ -345,6 +345,13 @@ spec:
                                   405, 410, 421, 451 and 501 can be specified as values,
                                   and you cannot specify a status code more than once.
                                 type: number
+                              ttl:
+                                description: The TTL (in seconds) for which to cache
+                                  responses with the corresponding status code. The
+                                  maximum allowed value is 1800s (30 minutes), noting
+                                  that infrequently accessed objects may be evicted
+                                  from the cache before the defined TTL.
+                                type: number
                             type: object
                           type: array
                         serveWhileStale:
@@ -372,6 +379,26 @@ spec:
                       HTTPS, or HTTP2. Structure is documented below.
                     items:
                       properties:
+                        connectTimeout:
+                          description: The timeout for new network connections to
+                            hosts. Structure is documented below.
+                          items:
+                            properties:
+                              nanos:
+                                description: Span of time that's a fraction of a second
+                                  at nanosecond resolution. Durations less than one
+                                  second are represented with a 0 seconds field and
+                                  a positive nanos field. Must be from 0 to 999,999,999
+                                  inclusive.
+                                type: number
+                              seconds:
+                                description: Span of time at a resolution of a second.
+                                  Must be from 0 to 315,576,000,000 inclusive.
+                                type: number
+                            required:
+                            - seconds
+                            type: object
+                          type: array
                         maxConnections:
                           description: The maximum number of connections to the backend
                             cluster. Defaults to 1024.
@@ -401,6 +428,53 @@ spec:
                     description: Time for which instance will be drained (not accept
                       new connections, but still work to finish started).
                     type: number
+                  connectionTrackingPolicy:
+                    description: Connection Tracking configuration for this BackendService.
+                      This is available only for Layer 4 Internal Load Balancing and
+                      Network Load Balancing. Structure is documented below.
+                    items:
+                      properties:
+                        connectionPersistenceOnUnhealthyBackends:
+                          description: 'Specifies connection persistence when backends
+                            are unhealthy. If set to DEFAULT_FOR_PROTOCOL, the existing
+                            connections persist on unhealthy backends only for connection-oriented
+                            protocols (TCP and SCTP) and only if the Tracking Mode
+                            is PER_CONNECTION (default tracking mode) or the Session
+                            Affinity is configured for 5-tuple. They do not persist
+                            for UDP. If set to NEVER_PERSIST, after a backend becomes
+                            unhealthy, the existing connections on the unhealthy backend
+                            are never persisted on the unhealthy backend. They are
+                            always diverted to newly selected healthy backends (unless
+                            all backends are unhealthy). If set to ALWAYS_PERSIST,
+                            existing connections always persist on unhealthy backends
+                            regardless of protocol and session affinity. It is generally
+                            not recommended to use this mode overriding the default.
+                            Default value is DEFAULT_FOR_PROTOCOL. Possible values
+                            are: DEFAULT_FOR_PROTOCOL, NEVER_PERSIST, ALWAYS_PERSIST.'
+                          type: string
+                        enableStrongAffinity:
+                          description: Enable Strong Session Affinity for Network
+                            Load Balancing. This option is not available publicly.
+                          type: boolean
+                        idleTimeoutSec:
+                          description: Specifies how long to keep a Connection Tracking
+                            entry while there is no matching traffic (in seconds).
+                            For L4 ILB the minimum(default) is 10 minutes and maximum
+                            is 16 hours. For NLB the minimum(default) is 60 seconds
+                            and the maximum is 16 hours.
+                          type: number
+                        trackingMode:
+                          description: 'Specifies the key used for connection tracking.
+                            There are two options: PER_CONNECTION: The Connection
+                            Tracking is performed as per the Connection Key (default
+                            Hash Method) for the specific protocol. PER_SESSION: The
+                            Connection Tracking is performed as per the configured
+                            Session Affinity. It matches the configured Session Affinity.
+                            Default value is PER_CONNECTION. Possible values are:
+                            PER_CONNECTION, PER_SESSION.'
+                          type: string
+                      type: object
+                    type: array
                   consistentHash:
                     description: Consistent Hash-based load balancing can be used
                       to provide soft session affinity based on HTTP headers, cookies
@@ -795,6 +869,10 @@ spec:
                     description: The Region in which the created backend service should
                       reside. If it is not provided, the provider region is used.
                     type: string
+                  securityPolicy:
+                    description: The security policy associated with this backend
+                      service.
+                    type: string
                   sessionAffinity:
                     description: 'Type of session affinity to use. The default is
                       NONE. Session affinity is not applicable if the protocol is
@@ -802,6 +880,21 @@ spec:
                       CLIENT_IP_PROTO, GENERATED_COOKIE, HEADER_FIELD, HTTP_COOKIE,
                       CLIENT_IP_NO_DESTINATION.'
                     type: string
+                  subsetting:
+                    description: Subsetting configuration for this BackendService.
+                      Currently this is applicable only for Internal TCP/UDP load
+                      balancing and Internal HTTP(S) load balancing. Structure is
+                      documented below.
+                    items:
+                      properties:
+                        policy:
+                          description: 'The algorithm used for subsetting. Possible
+                            values are: CONSISTENT_HASH_SUBSETTING.'
+                          type: string
+                      required:
+                      - policy
+                      type: object
+                    type: array
                   timeoutSec:
                     description: How many seconds to wait for the backend before considering
                       it a failed request. Default is 30 seconds. Valid range is [1,
@@ -1760,6 +1853,13 @@ spec:
                                   405, 410, 421, 451 and 501 can be specified as values,
                                   and you cannot specify a status code more than once.
                                 type: number
+                              ttl:
+                                description: The TTL (in seconds) for which to cache
+                                  responses with the corresponding status code. The
+                                  maximum allowed value is 1800s (30 minutes), noting
+                                  that infrequently accessed objects may be evicted
+                                  from the cache before the defined TTL.
+                                type: number
                             type: object
                           type: array
                         serveWhileStale:
@@ -1787,6 +1887,24 @@ spec:
                       HTTPS, or HTTP2. Structure is documented below.
                     items:
                       properties:
+                        connectTimeout:
+                          description: The timeout for new network connections to
+                            hosts. Structure is documented below.
+                          items:
+                            properties:
+                              nanos:
+                                description: Span of time that's a fraction of a second
+                                  at nanosecond resolution. Durations less than one
+                                  second are represented with a 0 seconds field and
+                                  a positive nanos field. Must be from 0 to 999,999,999
+                                  inclusive.
+                                type: number
+                              seconds:
+                                description: Span of time at a resolution of a second.
+                                  Must be from 0 to 315,576,000,000 inclusive.
+                                type: number
+                            type: object
+                          type: array
                         maxConnections:
                           description: The maximum number of connections to the backend
                             cluster. Defaults to 1024.
@@ -1816,6 +1934,53 @@ spec:
                     description: Time for which instance will be drained (not accept
                       new connections, but still work to finish started).
                     type: number
+                  connectionTrackingPolicy:
+                    description: Connection Tracking configuration for this BackendService.
+                      This is available only for Layer 4 Internal Load Balancing and
+                      Network Load Balancing. Structure is documented below.
+                    items:
+                      properties:
+                        connectionPersistenceOnUnhealthyBackends:
+                          description: 'Specifies connection persistence when backends
+                            are unhealthy. If set to DEFAULT_FOR_PROTOCOL, the existing
+                            connections persist on unhealthy backends only for connection-oriented
+                            protocols (TCP and SCTP) and only if the Tracking Mode
+                            is PER_CONNECTION (default tracking mode) or the Session
+                            Affinity is configured for 5-tuple. They do not persist
+                            for UDP. If set to NEVER_PERSIST, after a backend becomes
+                            unhealthy, the existing connections on the unhealthy backend
+                            are never persisted on the unhealthy backend. They are
+                            always diverted to newly selected healthy backends (unless
+                            all backends are unhealthy). If set to ALWAYS_PERSIST,
+                            existing connections always persist on unhealthy backends
+                            regardless of protocol and session affinity. It is generally
+                            not recommended to use this mode overriding the default.
+                            Default value is DEFAULT_FOR_PROTOCOL. Possible values
+                            are: DEFAULT_FOR_PROTOCOL, NEVER_PERSIST, ALWAYS_PERSIST.'
+                          type: string
+                        enableStrongAffinity:
+                          description: Enable Strong Session Affinity for Network
+                            Load Balancing. This option is not available publicly.
+                          type: boolean
+                        idleTimeoutSec:
+                          description: Specifies how long to keep a Connection Tracking
+                            entry while there is no matching traffic (in seconds).
+                            For L4 ILB the minimum(default) is 10 minutes and maximum
+                            is 16 hours. For NLB the minimum(default) is 60 seconds
+                            and the maximum is 16 hours.
+                          type: number
+                        trackingMode:
+                          description: 'Specifies the key used for connection tracking.
+                            There are two options: PER_CONNECTION: The Connection
+                            Tracking is performed as per the Connection Key (default
+                            Hash Method) for the specific protocol. PER_SESSION: The
+                            Connection Tracking is performed as per the configured
+                            Session Affinity. It matches the configured Session Affinity.
+                            Default value is PER_CONNECTION. Possible values are:
+                            PER_CONNECTION, PER_SESSION.'
+                          type: string
+                      type: object
+                    type: array
                   consistentHash:
                     description: Consistent Hash-based load balancing can be used
                       to provide soft session affinity based on HTTP headers, cookies
@@ -1936,6 +2101,10 @@ spec:
                     description: Fingerprint of this resource. A hash of the contents
                       stored in this object. This field is used in optimistic locking.
                     type: string
+                  generatedId:
+                    description: The unique identifier for the resource. This identifier
+                      is defined by the server.
+                    type: number
                   healthChecks:
                     description: The set of URLs to HealthCheck resources for health
                       checking this RegionBackendService. Currently at most one health
@@ -2123,6 +2292,10 @@ spec:
                     description: The Region in which the created backend service should
                       reside. If it is not provided, the provider region is used.
                     type: string
+                  securityPolicy:
+                    description: The security policy associated with this backend
+                      service.
+                    type: string
                   selfLink:
                     description: The URI of the created resource.
                     type: string
@@ -2133,6 +2306,19 @@ spec:
                       CLIENT_IP_PROTO, GENERATED_COOKIE, HEADER_FIELD, HTTP_COOKIE,
                       CLIENT_IP_NO_DESTINATION.'
                     type: string
+                  subsetting:
+                    description: Subsetting configuration for this BackendService.
+                      Currently this is applicable only for Internal TCP/UDP load
+                      balancing and Internal HTTP(S) load balancing. Structure is
+                      documented below.
+                    items:
+                      properties:
+                        policy:
+                          description: 'The algorithm used for subsetting. Possible
+                            values are: CONSISTENT_HASH_SUBSETTING.'
+                          type: string
+                      type: object
+                    type: array
                   timeoutSec:
                     description: How many seconds to wait for the backend before considering
                       it a failed request. Default is 30 seconds. Valid range is [1,
