--- a/package/crds/dns.gcp.upbound.io_recordsets.yaml
+++ b/package/crds/dns.gcp.upbound.io_recordsets.yaml
@@ -90,19 +90,19 @@ spec:
                           type: boolean
                         geo:
                           description: The configuration for Geolocation based routing
-                            policy. Structure is document below.
+                            policy. Structure is documented below.
                           items:
                             properties:
                               healthCheckedTargets:
                                 description: The list of targets to be health checked.
                                   Note that if DNSSEC is enabled for this zone, only
                                   one of rrdatas or health_checked_targets can be
-                                  set. Structure is document below.
+                                  set. Structure is documented below.
                                 items:
                                   properties:
                                     internalLoadBalancers:
                                       description: The list of internal load balancers
-                                        to health check. Structure is document below.
+                                        to health check. Structure is documented below.
                                       items:
                                         properties:
                                           ipAddress:
@@ -118,7 +118,8 @@ spec:
                                           loadBalancerType:
                                             description: 'The type of load balancer.
                                               This value is case-sensitive. Possible
-                                              values: ["regionalL4ilb"]'
+                                              values: ["regionalL4ilb", "regionalL7ilb",
+                                              "globalL7ilb"]'
                                             type: string
                                           networkUrl:
                                             description: The fully qualified url of
@@ -160,7 +161,7 @@ spec:
                             with global to regional failover. Queries are responded
                             to with the global primary targets, but if none of the
                             primary targets are healthy, then we fallback to a regional
-                            failover policy. Structure is document below.
+                            failover policy. Structure is documented below.
                           items:
                             properties:
                               backupGeo:
@@ -173,13 +174,13 @@ spec:
                                       description: The list of targets to be health
                                         checked. Note that if DNSSEC is enabled for
                                         this zone, only one of rrdatas or health_checked_targets
-                                        can be set. Structure is document below.
+                                        can be set. Structure is documented below.
                                       items:
                                         properties:
                                           internalLoadBalancers:
                                             description: The list of internal load
                                               balancers to health check. Structure
-                                              is document below.
+                                              is documented below.
                                             items:
                                               properties:
                                                 ipAddress:
@@ -195,7 +196,8 @@ spec:
                                                 loadBalancerType:
                                                   description: 'The type of load balancer.
                                                     This value is case-sensitive.
-                                                    Possible values: ["regionalL4ilb"]'
+                                                    Possible values: ["regionalL4ilb",
+                                                    "regionalL7ilb", "globalL7ilb"]'
                                                   type: string
                                                 networkUrl:
                                                   description: The fully qualified
@@ -240,12 +242,12 @@ spec:
                                 type: boolean
                               primary:
                                 description: The list of global primary targets to
-                                  be health checked. Structure is document below.
+                                  be health checked. Structure is documented below.
                                 items:
                                   properties:
                                     internalLoadBalancers:
                                       description: The list of internal load balancers
-                                        to health check. Structure is document below.
+                                        to health check. Structure is documented below.
                                       items:
                                         properties:
                                           ipAddress:
@@ -351,7 +353,8 @@ spec:
                                           loadBalancerType:
                                             description: 'The type of load balancer.
                                               This value is case-sensitive. Possible
-                                              values: ["regionalL4ilb"]'
+                                              values: ["regionalL4ilb", "regionalL7ilb",
+                                              "globalL7ilb"]'
                                             type: string
                                           networkUrl:
                                             description: The fully qualified url of
@@ -674,19 +677,19 @@ spec:
                           type: array
                         wrr:
                           description: The configuration for Weighted Round Robin
-                            based routing policy. Structure is document below.
+                            based routing policy. Structure is documented below.
                           items:
                             properties:
                               healthCheckedTargets:
                                 description: The list of targets to be health checked.
                                   Note that if DNSSEC is enabled for this zone, only
                                   one of rrdatas or health_checked_targets can be
-                                  set. Structure is document below.
+                                  set. Structure is documented below.
                                 items:
                                   properties:
                                     internalLoadBalancers:
                                       description: The list of internal load balancers
-                                        to health check. Structure is document below.
+                                        to health check. Structure is documented below.
                                       items:
                                         properties:
                                           ipAddress:
@@ -702,7 +705,8 @@ spec:
                                           loadBalancerType:
                                             description: 'The type of load balancer.
                                               This value is case-sensitive. Possible
-                                              values: ["regionalL4ilb"]'
+                                              values: ["regionalL4ilb", "regionalL7ilb",
+                                              "globalL7ilb"]'
                                             type: string
                                           networkUrl:
                                             description: The fully qualified url of
@@ -1297,19 +1301,19 @@ spec:
                           type: boolean
                         geo:
                           description: The configuration for Geolocation based routing
-                            policy. Structure is document below.
+                            policy. Structure is documented below.
                           items:
                             properties:
                               healthCheckedTargets:
                                 description: The list of targets to be health checked.
                                   Note that if DNSSEC is enabled for this zone, only
                                   one of rrdatas or health_checked_targets can be
-                                  set. Structure is document below.
+                                  set. Structure is documented below.
                                 items:
                                   properties:
                                     internalLoadBalancers:
                                       description: The list of internal load balancers
-                                        to health check. Structure is document below.
+                                        to health check. Structure is documented below.
                                       items:
                                         properties:
                                           ipAddress:
@@ -1325,7 +1329,8 @@ spec:
                                           loadBalancerType:
                                             description: 'The type of load balancer.
                                               This value is case-sensitive. Possible
-                                              values: ["regionalL4ilb"]'
+                                              values: ["regionalL4ilb", "regionalL7ilb",
+                                              "globalL7ilb"]'
                                             type: string
                                           networkUrl:
                                             description: The fully qualified url of
@@ -1367,7 +1372,7 @@ spec:
                             with global to regional failover. Queries are responded
                             to with the global primary targets, but if none of the
                             primary targets are healthy, then we fallback to a regional
-                            failover policy. Structure is document below.
+                            failover policy. Structure is documented below.
                           items:
                             properties:
                               backupGeo:
@@ -1380,13 +1385,13 @@ spec:
                                       description: The list of targets to be health
                                         checked. Note that if DNSSEC is enabled for
                                         this zone, only one of rrdatas or health_checked_targets
-                                        can be set. Structure is document below.
+                                        can be set. Structure is documented below.
                                       items:
                                         properties:
                                           internalLoadBalancers:
                                             description: The list of internal load
                                               balancers to health check. Structure
-                                              is document below.
+                                              is documented below.
                                             items:
                                               properties:
                                                 ipAddress:
@@ -1402,7 +1407,8 @@ spec:
                                                 loadBalancerType:
                                                   description: 'The type of load balancer.
                                                     This value is case-sensitive.
-                                                    Possible values: ["regionalL4ilb"]'
+                                                    Possible values: ["regionalL4ilb",
+                                                    "regionalL7ilb", "globalL7ilb"]'
                                                   type: string
                                                 networkUrl:
                                                   description: The fully qualified
@@ -1447,12 +1453,12 @@ spec:
                                 type: boolean
                               primary:
                                 description: The list of global primary targets to
-                                  be health checked. Structure is document below.
+                                  be health checked. Structure is documented below.
                                 items:
                                   properties:
                                     internalLoadBalancers:
                                       description: The list of internal load balancers
-                                        to health check. Structure is document below.
+                                        to health check. Structure is documented below.
                                       items:
                                         properties:
                                           ipAddress:
@@ -1468,7 +1474,8 @@ spec:
                                           loadBalancerType:
                                             description: 'The type of load balancer.
                                               This value is case-sensitive. Possible
-                                              values: ["regionalL4ilb"]'
+                                              values: ["regionalL4ilb", "regionalL7ilb",
+                                              "globalL7ilb"]'
                                             type: string
                                           networkUrl:
                                             description: The fully qualified url of
@@ -1504,19 +1511,19 @@ spec:
                           type: array
                         wrr:
                           description: The configuration for Weighted Round Robin
-                            based routing policy. Structure is document below.
+                            based routing policy. Structure is documented below.
                           items:
                             properties:
                               healthCheckedTargets:
                                 description: The list of targets to be health checked.
                                   Note that if DNSSEC is enabled for this zone, only
                                   one of rrdatas or health_checked_targets can be
-                                  set. Structure is document below.
+                                  set. Structure is documented below.
                                 items:
                                   properties:
                                     internalLoadBalancers:
                                       description: The list of internal load balancers
-                                        to health check. Structure is document below.
+                                        to health check. Structure is documented below.
                                       items:
                                         properties:
                                           ipAddress:
@@ -1532,7 +1539,8 @@ spec:
                                           loadBalancerType:
                                             description: 'The type of load balancer.
                                               This value is case-sensitive. Possible
-                                              values: ["regionalL4ilb"]'
+                                              values: ["regionalL4ilb", "regionalL7ilb",
+                                              "globalL7ilb"]'
                                             type: string
                                           networkUrl:
                                             description: The fully qualified url of
