--- a/package/crds/sql.gcp.upbound.io_users.yaml
+++ b/package/crds/sql.gcp.upbound.io_users.yaml
@@ -206,7 +206,8 @@ spec:
                   type:
                     description: The user type. It determines the method to authenticate
                       the user during login. The default is the database's built-in
-                      user type. Flags include "BUILT_IN", "CLOUD_IAM_USER", or "CLOUD_IAM_SERVICE_ACCOUNT".
+                      user type. Flags include "BUILT_IN", "CLOUD_IAM_USER", "CLOUD_IAM_GROUP"
+                      or "CLOUD_IAM_SERVICE_ACCOUNT".
                     type: string
                 type: object
               initProvider:
@@ -539,7 +540,8 @@ spec:
                   type:
                     description: The user type. It determines the method to authenticate
                       the user during login. The default is the database's built-in
-                      user type. Flags include "BUILT_IN", "CLOUD_IAM_USER", or "CLOUD_IAM_SERVICE_ACCOUNT".
+                      user type. Flags include "BUILT_IN", "CLOUD_IAM_USER", "CLOUD_IAM_GROUP"
+                      or "CLOUD_IAM_SERVICE_ACCOUNT".
                     type: string
                 type: object
               conditions:
