--- a/package/crds/bigquery.gcp.upbound.io_datasets.yaml
+++ b/package/crds/bigquery.gcp.upbound.io_datasets.yaml
@@ -196,6 +196,11 @@ spec:
                           description: An email address of a Google Group to grant
                             access to.
                           type: string
+                        iamMember:
+                          description: 'Some other type of member that appears in
+                            the IAM Policy but isn''t a user, group, domain, or special
+                            group. For example: allUsers'
+                          type: string
                         role:
                           description: Describes the rights granted to the user specified
                             by the other member of the access object. Basic, predefined,
@@ -389,6 +394,23 @@ spec:
                   description:
                     description: A user-friendly description of the dataset
                     type: string
+                  externalDatasetReference:
+                    description: Information about the external metadata storage where
+                      the dataset is defined. Structure is documented below.
+                    items:
+                      properties:
+                        connection:
+                          description: 'The connection id that is used to access the
+                            externalSource. Format: projects/{projectId}/locations/{locationId}/connections/{connectionId}'
+                          type: string
+                        externalSource:
+                          description: External source that backs this dataset.
+                          type: string
+                      required:
+                      - connection
+                      - externalSource
+                      type: object
+                    type: array
                   friendlyName:
                     description: A descriptive name for the dataset
                     type: string
@@ -402,7 +424,7 @@ spec:
                     additionalProperties:
                       type: string
                     description: The labels associated with this dataset. You can
-                      use these to organize and group your datasets
+                      use these to organize and group your datasets.
                     type: object
                   location:
                     description: The geographic location where the dataset should
@@ -415,6 +437,12 @@ spec:
                   project:
                     description: The ID of the project in which the resource belongs.
                       If it is not provided, the provider project is used.
+                    type: string
+                  storageBillingModel:
+                    description: Specifies the storage billing model for the dataset.
+                      Set this flag value to LOGICAL to use logical bytes for storage
+                      billing, or to PHYSICAL to use physical bytes instead. LOGICAL
+                      is the default if this flag isn't specified.
                     type: string
                 type: object
               initProvider:
@@ -826,6 +854,11 @@ spec:
                           description: An email address of a Google Group to grant
                             access to.
                           type: string
+                        iamMember:
+                          description: 'Some other type of member that appears in
+                            the IAM Policy but isn''t a user, group, domain, or special
+                            group. For example: allUsers'
+                          type: string
                         role:
                           description: Describes the rights granted to the user specified
                             by the other member of the access object. Basic, predefined,
@@ -939,9 +972,28 @@ spec:
                   description:
                     description: A user-friendly description of the dataset
                     type: string
+                  effectiveLabels:
+                    additionalProperties:
+                      type: string
+                    description: for all of the labels present on the resource.
+                    type: object
                   etag:
                     description: A hash of the resource.
                     type: string
+                  externalDatasetReference:
+                    description: Information about the external metadata storage where
+                      the dataset is defined. Structure is documented below.
+                    items:
+                      properties:
+                        connection:
+                          description: 'The connection id that is used to access the
+                            externalSource. Format: projects/{projectId}/locations/{locationId}/connections/{connectionId}'
+                          type: string
+                        externalSource:
+                          description: External source that backs this dataset.
+                          type: string
+                      type: object
+                    type: array
                   friendlyName:
                     description: A descriptive name for the dataset
                     type: string
@@ -958,7 +1010,7 @@ spec:
                     additionalProperties:
                       type: string
                     description: The labels associated with this dataset. You can
-                      use these to organize and group your datasets
+                      use these to organize and group your datasets.
                     type: object
                   lastModifiedTime:
                     description: The date when this dataset or any of its tables was
@@ -979,6 +1031,18 @@ spec:
                   selfLink:
                     description: The URI of the created resource.
                     type: string
+                  storageBillingModel:
+                    description: Specifies the storage billing model for the dataset.
+                      Set this flag value to LOGICAL to use logical bytes for storage
+                      billing, or to PHYSICAL to use physical bytes instead. LOGICAL
+                      is the default if this flag isn't specified.
+                    type: string
+                  terraformLabels:
+                    additionalProperties:
+                      type: string
+                    description: The combination of labels configured directly on
+                      the resource and default labels configured on the provider.
+                    type: object
                 type: object
               conditions:
                 description: Conditions of the resource.
