--- a/package/crds/cloudplatform.gcp.upbound.io_serviceaccounts.yaml
+++ b/package/crds/cloudplatform.gcp.upbound.io_serviceaccounts.yaml
@@ -67,6 +67,10 @@ spec:
                 type: string
               forProvider:
                 properties:
+                  createIgnoreAlreadyExists:
+                    description: If set to true, skip service account creation if
+                      a service account with the same email already exists.
+                    type: boolean
                   description:
                     description: A text description of the service account. Must be
                       less than or equal to 256 UTF-8 bytes.
@@ -318,6 +322,10 @@ spec:
             properties:
               atProvider:
                 properties:
+                  createIgnoreAlreadyExists:
+                    description: If set to true, skip service account creation if
+                      a service account with the same email already exists.
+                    type: boolean
                   description:
                     description: A text description of the service account. Must be
                       less than or equal to 256 UTF-8 bytes.
