--- a/package/crds/compute.gcp.upbound.io_globaladdresses.yaml
+++ b/package/crds/compute.gcp.upbound.io_globaladdresses.yaml
@@ -83,6 +83,12 @@ spec:
                     description: 'The IP Version that will be used by this address.
                       The default value is IPV4. Possible values are: IPV4, IPV6.'
                     type: string
+                  labels:
+                    additionalProperties:
+                      type: string
+                    description: Labels to apply to this address.  A list of key->value
+                      pairs.
+                    type: object
                   network:
                     description: The URL of the network in which to reserve the IP
                       range. The IP range must be in RFC1918 space. The network cannot
@@ -165,8 +171,8 @@ spec:
                   prefixLength:
                     description: The prefix length of the IP range. If not present,
                       it means the address field is a single IP address. This field
-                      is not applicable to addresses with addressType=EXTERNAL, or
-                      addressType=INTERNAL when purpose=PRIVATE_SERVICE_CONNECT
+                      is not applicable to addresses with addressType=INTERNAL when
+                      purpose=PRIVATE_SERVICE_CONNECT
                     type: number
                   project:
                     description: The ID of the project in which the resource belongs.
@@ -436,6 +442,11 @@ spec:
                   description:
                     description: An optional description of this resource.
                     type: string
+                  effectiveLabels:
+                    additionalProperties:
+                      type: string
+                    description: for all of the labels present on the resource.
+                    type: object
                   id:
                     description: an identifier for the resource with format projects/{{project}}/global/addresses/{{name}}
                     type: string
@@ -443,6 +454,16 @@ spec:
                     description: 'The IP Version that will be used by this address.
                       The default value is IPV4. Possible values are: IPV4, IPV6.'
                     type: string
+                  labelFingerprint:
+                    description: (Beta) The fingerprint used for optimistic locking
+                      of this resource.  Used internally during updates.
+                    type: string
+                  labels:
+                    additionalProperties:
+                      type: string
+                    description: Labels to apply to this address.  A list of key->value
+                      pairs.
+                    type: object
                   network:
                     description: The URL of the network in which to reserve the IP
                       range. The IP range must be in RFC1918 space. The network cannot
@@ -452,8 +473,8 @@ spec:
                   prefixLength:
                     description: The prefix length of the IP range. If not present,
                       it means the address field is a single IP address. This field
-                      is not applicable to addresses with addressType=EXTERNAL, or
-                      addressType=INTERNAL when purpose=PRIVATE_SERVICE_CONNECT
+                      is not applicable to addresses with addressType=INTERNAL when
+                      purpose=PRIVATE_SERVICE_CONNECT
                     type: number
                   project:
                     description: The ID of the project in which the resource belongs.
@@ -465,6 +486,12 @@ spec:
                   selfLink:
                     description: The URI of the created resource.
                     type: string
+                  terraformLabels:
+                    additionalProperties:
+                      type: string
+                    description: (Beta) The combination of labels configured directly
+                      on the resource and default labels configured on the provider.
+                    type: object
                 type: object
               conditions:
                 description: Conditions of the resource.
