--- a/package/crds/compute.gcp.upbound.io_networks.yaml
+++ b/package/crds/compute.gcp.upbound.io_networks.yaml
@@ -444,6 +444,10 @@ spec:
                       are evaluated. Default value is AFTER_CLASSIC_FIREWALL. Possible
                       values are: BEFORE_CLASSIC_FIREWALL, AFTER_CLASSIC_FIREWALL.'
                     type: string
+                  numericId:
+                    description: The unique identifier for the resource. This identifier
+                      is defined by the server.
+                    type: string
                   project:
                     description: The ID of the project in which the resource belongs.
                       If it is not provided, the provider project is used.
