--- a/package/crds/compute.gcp.upbound.io_regiontargethttpsproxies.yaml
+++ b/package/crds/compute.gcp.upbound.io_regiontargethttpsproxies.yaml
@@ -68,6 +68,18 @@ spec:
                 type: string
               forProvider:
                 properties:
+                  certificateManagerCertificates:
+                    description: URLs to certificate manager certificate resources
+                      that are used to authenticate connections between users and
+                      the load balancer. Currently, you may specify up to 15 certificates.
+                      Certificate manager certificates do not apply when the load
+                      balancing scheme is set to INTERNAL_SELF_MANAGED. sslCertificates
+                      and certificateManagerCertificates fields can not be defined
+                      together. Accepted format is //certificatemanager.googleapis.com/projects/{project}/locations/{location}/certificates/{resourceName}
+                      or just the self_link projects/{project}/locations/{location}/certificates/{resourceName}
+                    items:
+                      type: string
+                    type: array
                   description:
                     description: An optional description of this resource.
                     type: string
@@ -81,9 +93,11 @@ spec:
                       used.
                     type: string
                   sslCertificates:
-                    description: A list of RegionSslCertificate resources that are
-                      used to authenticate connections between users and the load
-                      balancer. Currently, exactly one SSL certificate must be specified.
+                    description: URLs to SslCertificate resources that are used to
+                      authenticate connections between users and the load balancer.
+                      At least one SSL certificate must be specified. Currently, you
+                      may specify up to 15 SSL certificates. sslCertificates do not
+                      apply when the load balancing scheme is set to INTERNAL_SELF_MANAGED.
                     items:
                       type: string
                     type: array
@@ -164,6 +178,12 @@ spec:
                             type: string
                         type: object
                     type: object
+                  sslPolicy:
+                    description: A reference to the Region SslPolicy resource that
+                      will be associated with the TargetHttpsProxy resource. If not
+                      set, the TargetHttpsProxy resource will not have any SSL policy
+                      configured.
+                    type: string
                   urlMap:
                     description: A reference to the RegionUrlMap resource that defines
                       the mapping from URL to the RegionBackendService.
@@ -470,6 +490,18 @@ spec:
             properties:
               atProvider:
                 properties:
+                  certificateManagerCertificates:
+                    description: URLs to certificate manager certificate resources
+                      that are used to authenticate connections between users and
+                      the load balancer. Currently, you may specify up to 15 certificates.
+                      Certificate manager certificates do not apply when the load
+                      balancing scheme is set to INTERNAL_SELF_MANAGED. sslCertificates
+                      and certificateManagerCertificates fields can not be defined
+                      together. Accepted format is //certificatemanager.googleapis.com/projects/{project}/locations/{location}/certificates/{resourceName}
+                      or just the self_link projects/{project}/locations/{location}/certificates/{resourceName}
+                    items:
+                      type: string
+                    type: array
                   creationTimestamp:
                     description: Creation timestamp in RFC3339 text format.
                     type: string
@@ -495,12 +527,20 @@ spec:
                     description: The URI of the created resource.
                     type: string
                   sslCertificates:
-                    description: A list of RegionSslCertificate resources that are
-                      used to authenticate connections between users and the load
-                      balancer. Currently, exactly one SSL certificate must be specified.
+                    description: URLs to SslCertificate resources that are used to
+                      authenticate connections between users and the load balancer.
+                      At least one SSL certificate must be specified. Currently, you
+                      may specify up to 15 SSL certificates. sslCertificates do not
+                      apply when the load balancing scheme is set to INTERNAL_SELF_MANAGED.
                     items:
                       type: string
                     type: array
+                  sslPolicy:
+                    description: A reference to the Region SslPolicy resource that
+                      will be associated with the TargetHttpsProxy resource. If not
+                      set, the TargetHttpsProxy resource will not have any SSL policy
+                      configured.
+                    type: string
                   urlMap:
                     description: A reference to the RegionUrlMap resource that defines
                       the mapping from URL to the RegionBackendService.
