--- a/package/crds/compute.gcp.upbound.io_regionurlmaps.yaml
+++ b/package/crds/compute.gcp.upbound.io_regionurlmaps.yaml
@@ -1868,6 +1868,17 @@ spec:
                                             type: string
                                         type: object
                                       type: array
+                                    pathTemplateMatch:
+                                      description: For satisfying the matchRule condition,
+                                        the path of the request must match the wildcard
+                                        pattern specified in pathTemplateMatch after
+                                        removing any query parameters and anchor that
+                                        may be part of the original URL. pathTemplateMatch
+                                        must be between 1 and 255 characters (inclusive).  The
+                                        pattern specified by pathTemplateMatch may
+                                        have at most 5 wildcard operators and at most
+                                        5 variable captures in total.
+                                      type: string
                                     prefixMatch:
                                       description: For satisfying the matchRule condition,
                                         the request's path must begin with the specified
@@ -2210,6 +2221,22 @@ spec:
                                               matching portion of the request's path
                                               is replaced by pathPrefixRewrite. The
                                               value must be between 1 and 1024 characters.
+                                            type: string
+                                          pathTemplateRewrite:
+                                            description: Prior to forwarding the request
+                                              to the selected origin, if the request
+                                              matched a pathTemplateMatch, the matching
+                                              portion of the request's path is replaced
+                                              re-written using the pattern specified
+                                              by pathTemplateRewrite. pathTemplateRewrite
+                                              must be between 1 and 255 characters
+                                              (inclusive), must start with a '/',
+                                              and must only use variables captured
+                                              by the route's pathTemplate matchers.
+                                              pathTemplateRewrite may only be used
+                                              when all of a route's MatchRules specify
+                                              pathTemplate. Only one of pathPrefixRewrite
+                                              and pathTemplateRewrite may be specified.
                                             type: string
                                         type: object
                                       type: array
@@ -5771,6 +5798,17 @@ spec:
                                             type: string
                                         type: object
                                       type: array
+                                    pathTemplateMatch:
+                                      description: For satisfying the matchRule condition,
+                                        the path of the request must match the wildcard
+                                        pattern specified in pathTemplateMatch after
+                                        removing any query parameters and anchor that
+                                        may be part of the original URL. pathTemplateMatch
+                                        must be between 1 and 255 characters (inclusive).  The
+                                        pattern specified by pathTemplateMatch may
+                                        have at most 5 wildcard operators and at most
+                                        5 variable captures in total.
+                                      type: string
                                     prefixMatch:
                                       description: For satisfying the matchRule condition,
                                         the request's path must begin with the specified
@@ -6113,6 +6151,22 @@ spec:
                                               matching portion of the request's path
                                               is replaced by pathPrefixRewrite. The
                                               value must be between 1 and 1024 characters.
+                                            type: string
+                                          pathTemplateRewrite:
+                                            description: Prior to forwarding the request
+                                              to the selected origin, if the request
+                                              matched a pathTemplateMatch, the matching
+                                              portion of the request's path is replaced
+                                              re-written using the pattern specified
+                                              by pathTemplateRewrite. pathTemplateRewrite
+                                              must be between 1 and 255 characters
+                                              (inclusive), must start with a '/',
+                                              and must only use variables captured
+                                              by the route's pathTemplate matchers.
+                                              pathTemplateRewrite may only be used
+                                              when all of a route's MatchRules specify
+                                              pathTemplate. Only one of pathPrefixRewrite
+                                              and pathTemplateRewrite may be specified.
                                             type: string
                                         type: object
                                       type: array
