--- a/examples/container/v1beta2/nodepool.yaml
+++ b/examples/container/v1beta2/nodepool.yaml
@@ -6,6 +6,7 @@ apiVersion: container.gcp.upbound.io/v1beta2
 kind: NodePool
 metadata:
   annotations:
+    uptest.upbound.io/disable-import: "true"
     meta.upbound.io/example-id: container/v1beta2/nodepool
   labels:
     testing.upbound.io/example-name: nodepool
